<?xml version="1.0" encoding="utf-8"?>
<resources><!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lab_test_list">LabTestListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="lab_test_type_header">Please select the lab test type.</string>
    <string name="submit">submit</string>
    <string name="how_is_the_lab_test_stored">How is the lab test stored?</string>
    <string name="app_name">myPharmacy</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender_hint">Gender</string>
    <string name="select_a_date">Select a date</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_ft">Height (ft)</string>
    <string name="marital_status_hint">Marital_Status</string>
    <string name="blood_type_hint">Blood Type</string>
    <string name="save">Save</string>
    <string name="home_tab_title">myPharmacy Home</string>
    <string name="medical_record_tab_title">Medical Records</string>
    <string name="medication_reminder_tab_title">Medication Reminder</string>
    <string name="family_tab_title">Family</string>
    <string name="menstrual_calendar_tab_title">Menstrual Calendar</string>
    <string name="notification_button_title">Notifications</string>
    <string name="home_name_view">John Doe</string>
    <string name="home_gender_view">Male</string>
    <string name="home_birth_date">Born on 01/01/1970</string>
    <string name="home_address_view">123 Street</string>
    <string name="home_phone_view">555–555–555</string>
    <string name="home_marital_view">Single</string>
    <string name="home_blood_view">O+</string>
    <string-array name="blood_types">
        <item>No Blood Type Selected</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="gender">
        <item>No Gender Selected</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="marital_status">
        <item>No Marital Status Selected</item>
        <item>Married</item>
        <item>Single</item>
    </string-array>
    <string-array name="manufacturers_array">
        <item>Bayer</item>
        <item>Pfizer</item>
        <item>Novartis</item>
        <item>Johnson &amp; Johnson</item>
        <item>GSK</item>
    </string-array>
    <string-array name="categories_array">
        <item>Analgesic</item>
        <item>Antibiotic</item>
        <item>Antihypertensive</item>
        <item>Antiallergic</item>
        <item>Antidepressant</item>
        <item>Antipyretic</item>
    </string-array>
    <string-array name="types_array">
        <item>Tablet</item>
        <item>Capsule</item>
        <item>Syrup</item>
        <item>Injection</item>
        <item>Ointment</item>
        <item>Drops</item>
    </string-array>
    <string-array name="doctor_specialties_array">
        <item>Cardiologist</item>
        <item>Dermatologist</item>
        <item>Endocrinologist</item>
        <item>Gastroenterologist</item>
        <item>Neurologist</item>
        <item>Orthopedic Surgeon</item>
        <item>Pediatrician</item>
        <item>Psychiatrist</item>
        <item>Radiologist</item>
        <item>Urologist</item>
    </string-array>
    <string name="startDate">Please enter the start date:</string>
    <string name="endDate">Please enter the end date:</string>
    <string name="menstruarionHeader">Please enter the start date and end date of your latest menstruation.</string>
    <string name="MenstrualLegend">Red : Menstrual Phase\nGray : Next Expected Menstruation\nBlue : Luteal Phase\nGreen : Follicular Phase\nPink : Ovulation Phase</string>
    <string name="choose_a_manufacturer">Choose a Manufacturer</string>
    <string name="choose_a_category">Choose a Category</string>
    <string name="choose_a_drug_type">Choose a Drug Type</string>
    <string name="type">Type</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="create_drug">Create Drug</string>
    <string name="category">Category</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="description">Description</string>
    <string name="name">Name</string>

    <string name="nextArrow">-></string>
    <string name="previousArrow"> &lt;-</string>
    <string name="tell_us_about_yourself">Tell us about Yourself!</string>
    <string name="lab_text_name">Please enter the name.</string>
    <string name="ex_xray">ex: XRay</string>
    <string name="please_fill_in_lab_test_information">Please fill in lab test information.</string>
    <string name="when_was_the_test_taken">When was the test taken?</string>


</resources>